2012-09-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* menu.py, view.py, twitter/output.py, twitter/tweetentry.py:
	  Added a new pop-up menu item 'View Conversation'.
	* share/html/theme/: Added a new attribute 'data-inreplyto'.
	* plugins/twitter/: Added support for unofficial related_results API.
	* twittytwister/twitter.py, twittytwister/tjson.py: Added support
	  for JSON format in REST API.
	* com.googlecode.gfeedline.gschema.xml.in: Added a new gsettings
	  key 'recent-account'.

2012-09-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/commonui.py: Added a new module.
	* accountliststore.py: Added account migration from GSettings.
	* window.py, feedsource.py: Disable sensitiveness of update menu
	  item & feed new button without any account configured.
	* utils/iconimage.py: Added icons to account liststore.

2012-09-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py, menu.py: Show screen name on retweet dialog.

2012-09-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py, update.glade: Added multi-account support.

2012-09-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* feedsource.py, feedsource.glade: Added UI for multi-account support.

2012-09-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* accountliststore.py, liststore.py: Added multi-account support.

2012-09-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* accountliststore.py, preferences/accounts.py: Started
	  implementation for multi-account.
	* feedsource.glade, preferences.glade: Added interfaces for
	  multi-account support.

2012-09-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* theme.py, twitter/output.py, twitter/tweetentry.py:
	  Added new templates: retweet.html and protected.html.
	  Added substitution keywords (retweet_by_screen_name,
	  title_by_name & title_by_screen_name).

2012-08-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.6.2 release.

2012-08-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* po/ja.po: Fixed a mistranslation.
