@@ -1,5 +1,6 @@
 2012-09-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* updatewindow.py: Added support for recent account.
 	* menu.py, view.py, twitter/output.py, twitter/tweetentry.py:
 	  Added a new pop-up menu item 'View Conversation'.
 	* share/html/theme/: Added a new attribute 'data-inreplyto'.
